<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/callBack_Tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff00ff00"
        android:textSize="50.0dip" />

    <TextView
        android:id="@+id/receive_Tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="false"
        android:textColor="#ff00ff00"
        android:textSize="16.0dip" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <Button
        android:id="@+id/start_Btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop_Btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

    <Button
        android:id="@+id/get_Btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get" />

    <Button
        android:id="@+id/start_task_Btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_task" />

    <Button
        android:id="@+id/stop_task_Btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_task" />

</LinearLayout>